06.1-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paytam-svc
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: paytam
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
